...
          ),
          Flexible(
            child: ListView.separated(
              shrinkWrap: true,
              padding: const EdgeInsets.symmetric(vertical: 8),
              itemCount: builtInNoteTemplates.length,
              separatorBuilder: (_, _) => const Divider(height: 0),
              itemBuilder: (context, i) {
                final template = builtInNoteTemplates[i];
                return ListTile(
                  leading: Icon(template.icon),
                  title: Text(template.localisedName(context)),
                  subtitle: Text(template.localisedDescription(context)),
...
